# out_ptr

./: CMakeLists.txt  README.md
include/out_ptr/: version.h
src/: CMakeLists.txt  out_ptr.cpp
src/include/: out_ptr.h
src/include/out_ptr/: base_inout_ptr_impl.h  base_out_ptr_impl.h  inout_ptr.h  inout_ptr_traits.h  integer_sequence.h  is_specialization_of.h  marker.h  necessary_arity.h  out_ptr.h  out_ptr_traits.h  pointer_of.h  simple_inout_ptr.h  simple_out_ptr.h  voidpp_op.h
tests/: CMakeLists.txt  const_test.cpp  custom_unique_deleter_test.cpp  customized_inout_ptr_test.cpp  customized_out_ptr_test.cpp  customized_traits_inout_ptr_test.cpp  customized_traits_out_ptr_test.cpp  exceptions_inout_ptr_test.cpp  exceptions_out_ptr_test.cpp  footguns.cpp  inout_ptr_test.cpp  out_ptr_test.cpp  raw_inout_ptr_test.cpp  raw_out_ptr_test.cpp  simple_inout_ptr_test.cpp  simple_out_ptr_test.cpp  test_out_ptr.cpp
tests/include/: c_api.h
